--- a/gradle.properties
+++ b/gradle.properties
@@ -6,11 +6,11 @@ java_toolchain_version=21
 
 included_projects=:common
 
-minecraft_version=1.21.7
+minecraft_version=1.19.4
 fabric_loader_version=0.16.13
 
 # Mod information
-mod_version=1.21.7-2.0.5
+mod_version=1.19.4-2.0.5
 mod_id=shulkerbox
 mod_display_name=Advanced Shulkerboxes
 
@@ -19,10 +19,9 @@ use_mixins=true
 enable_configbuilder=true
 
 # Project upload
-curseforge_upload_id=253861
-modrinth_upload_id=PZAaSx6B
-upload_release_type=beta
-upload_recommended=true
+enable_curseforge_upload=false
+enable_modrinth_upload=false
+enable_mod_update=false
 
 # Gradle plugins
 mod_gradle_script_version=1.0.42
